--- a/ExampleConfig.ini
+++ b/ExampleConfig.ini
@@ -1,7 +1,14 @@
 BaseString_1 = "Base String Parameter"
 
-; only zero based indexed Arrays supported in flat INI - file
-IndexedArray = "First Element", "Second, Element", "Third Element"
+; zero based indexed Array
+IndexedArray[] = "First Element"
+IndexedArray[] = "Second, Element"
+IndexedArray[] = "Third Element"
+
+; associative Arrays
+AssocArray["First"]		= "Element 1", 
+AssocArray["Second"]	= "Element 2", 
+AssocArray["Third"]		= "Element 3"
 
 ; begin section 'Module_1' ... section is active until next section begin or end of file
 [Module_1]
