Added unit test

--- a/ExampleConfig.ini
+++ b/ExampleConfig.ini
@@ -17,6 +17,7 @@ String_2	= "Second string; Parameter"	; some comment...
 Int_1		= 10
 Int_2		= 20
 Date_1		= 2021-01-12
+Date_2		= 1613775600
 DateTime_1	= 2021-02-23 13:47
 
 ; and another section
