--- a/SKien/Test/Config/testdata/TestConfig.ini
+++ b/SKien/Test/Config/testdata/TestConfig.ini
@@ -14,6 +14,7 @@ AssocArray["Third"]		= "Element 3"
 [Module_1]
 String_1 	= 'First,; string Parameter'    ; xxxx
 String_2	= "Second string; Parameter"	; some comment...
+EmptyString	= 				; some comment...
 Int_1		= 10
 Int_2		= 20
 Float_1		= 12.34
